k8s-test-env/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redocly-cli-test
  labels:
    name: redocly-cli-test
