k8s-test-env/network-policy-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-outbound-traffic
  namespace: redocly-cli-test
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    # Allow all outbound traffic
    - to: []
